# minimal_renderer

./: .gitignore  .gitmodules  CMakeLists.txt  minimal_renderer.cpp
glad/include/glad/: glad.h
glad/src/: glad.c  glad.c:Zone.Identifier
include/: camera.h  eye.h  frustum.h  graphics_memory.hpp  locations_descriptor.h  material.h  mesh.hpp  mesh_buffer_indices.h  mesh_span.hpp  opengl_allocator.h  platform.h  render_batch.h  render_batch_span.hpp  render_entity.h  renderer.h  renderer.hpp  shader.h  spans.hpp  transform.h  uniform_buffer_segment.h  vertex.h
shaders/: 3d_transform_fragment.slh
src/: platform_arch_linux.cpp  renderer.cpp  renderer_opengl.cpp
